--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="site-title">
 <a href="index.html">Trapsons Cute</a>
 <br><br>
-<audio autoplay="" id="audio1" onloadeddata="setHalfVolume()" src="trapson.mp3"></audio>
+<audio autoplay="" id="audio1" onloadeddata="setHalfVolume()" src="https://trapson.com/trapson.mp3"></audio>
 <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').play()">Play</trap>
 <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').pause()">Pause</trap>
 </div>
