--- a/index.html
+++ b/index.html
@@ -1,96 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Trapsons Cute</title>
-<meta name="title" content="Trapson">
-<meta name="description" content="Trapson Is Cute">
-
-<meta property="og:type" content="website">
-<meta property="og:url" content="">
-<meta property="og:title" content="Trapson">
-<meta property="og:description" content="Trapson Is Cute">
-<meta property="og:image" content="">
-
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="">
-<meta property="twitter:title" content="Trapson">
-<meta property="twitter:description" content="Trapson Is Cute">
-<meta property="twitter:image" content="">
-
-<script src="https://trapson.com/js/static-jquery.min.js"></script>
-<script src="https://trapson.com/js/yes.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&amp;display=swap" rel="stylesheet">
-<link href="https://trapson.com/css/1static-main.css" rel="stylesheet" media="screen">
-<link rel="stylesheet" href="https://trapson.com/css/2static-normalize.min.css">
-<link rel="stylesheet" href="https://trapson.com/css/yes.css">
+  <title>Trapsons Cute</title>
+  <meta name="title" content="Trapson">
+  <meta name="description" content="Trapson Is Cute">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="">
+  <meta property="og:title" content="Trapson">
+  <meta property="og:description" content="Trapson Is Cute">
+  <meta property="og:image" content="">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="">
+  <meta property="twitter:title" content="Trapson">
+  <meta property="twitter:description" content="Trapson Is Cute">
+  <meta property="twitter:image" content="">
+  <!-- Yes Stuff -->
+  <script src="js/static-jquery.min.js"></script>
+  <script src="js/yes.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&amp;display=swap" rel="stylesheet">
+  <link href="css/1static-main.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="css/2static-normalize.min.css">
+  <link rel="stylesheet" href="css/yes.css">
 </head>
 <body>
 <div class="grid-x navigation-section">
-<div class="header">
-<div class="site-title">
-<a href="index.html">Trapsons Cute</a>
-<br><br>
-<audio autoplay="" id="audio1" onloadeddata="setHalfVolume()" src="https://trapson.com/trapson.mp3"></audio>
-<trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').play()">Play</trap>
-<trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').pause()">Pause</trap>
+	<div class="header">
+        <div class="site-title">
+            <a href="index.html">Trapsons Cute</a>
+            <br><br>
+            <audio autoplay="" id="audio1" onloadeddata="setHalfVolume()" src="trapson.mp3"></audio>
+            <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').play()">Play</trap>
+            <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').pause()">Pause</trap>
+        </div>
+	</div>
 </div>
-</div>
-</div>
+
 <div class="tools-section">
-<div class="tools-header">
-Helpful Links
-</div>
-<div class="tool tool-9">
-<div class="tool-body">
-<a href="https://discord.gg/YEqq3aahjh" class="tool-link">
-<span class="tool-title">Discord</span>
-<span class="tool-description">Trapson's Discord Server</span>
-</a>
-</div>
-</div>
-<div class="tool tool-9">
-<div class="tool-body">
-<a href="https://github.com/I-Trapson-I" class="tool-link">
-<span class="tool-title">Github</span>
-<span class="tool-description">Trapson's Github</span>
-</a>
-</div>
-</div>
-<div class="tool tool-9">
-<div class="tool-body">
-<a href="https://www.twitch.tv/trapson_" class="tool-link">
-<span class="tool-title">Twitch</span>
-<span class="tool-description">Trapson's Twitch</span>
-</a>
-</div>
-</div>
-<div class="tool tool-9">
-<div class="tool-body">
-<a href="https://trapson.pictures/" class="tool-link">
-<span class="tool-title">Pictures</span>
-<span class="tool-description">Trapson's Awesome Pictures Site</span>
-</a>
-</div>
-</div>
-<div class="tools-header">
-Other links
-</div>
-<div class="tool tool-5">
-<div class="tool-body">
-<a href="https://awesomebot.xyz/" class="tool-link">
-<span class="tool-title">AwesomeBot</span>
-<span class="tool-description">Awesome Discord Bot</span>
-</a>
-</div>
-</div>
-<div class="tool tool-5">
-<div class="tool-body">
-<a href="https://www.hetzner.com/cloud" class="tool-link">
-<span class="tool-title">Hetzner Cloud</span>
-<span class="tool-description">Hetzners Cloud Servers</span>
-</a>
-</div>
-</div>
+	<div class="tools-header">
+		Helpful Links
+	</div>
+    <div class="tool tool-9">
+		<div class="tool-body">
+      		<a href="https://discord.gg/YEqq3aahjh" class="tool-link">
+				<span class="tool-title">Discord</span>
+       			<span class="tool-description">Trapson's Discord Server</span>
+      		</a>
+		</div>
+    </div>
+    <div class="tool tool-9">
+		<div class="tool-body">
+      		<a href="https://github.com/I-Trapson-I" class="tool-link">
+				<span class="tool-title">Github</span>
+       			<span class="tool-description">Trapson's Github</span>
+      		</a>
+		</div>
+    </div>
+	<div class="tool tool-9">
+		<div class="tool-body">
+			<a href="https://www.twitch.tv/trapson_" class="tool-link">
+        		<span class="tool-title">Twitch</span>
+        		<span class="tool-description">Trapson's Twitch</span>
+      		</a>
+		</div>
+	</div>
+	<div class="tool tool-9">
+		<div class="tool-body">
+			<a href="https://trapson.pictures/" class="tool-link">
+        		<span class="tool-title">Pictures</span>
+        		<span class="tool-description">Trapson's Awesome Pictures Site</span>
+      		</a>
+		</div>
+	</div>
+	<div class="tools-header">
+		Other links
+	</div>
+	<div class="tool tool-5">
+		<div class="tool-body">
+      		<a href="https://awesomebot.xyz/" class="tool-link">
+				<span class="tool-title">AwesomeBot</span>
+       			<span class="tool-description">Awesome Discord Bot</span>
+      		</a>
+		</div>
+    </div>
+	<div class="tool tool-5">
+		<div class="tool-body">
+      		<a href="https://www.hetzner.com/cloud" class="tool-link">
+				<span class="tool-title">Hetzner Cloud</span>
+       			<span class="tool-description">Hetzners Cloud Servers</span>
+      		</a>
+		</div>
+    </div>
 </div>
 </body>
 </html>
