--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Trapsons Cute</title>
+  <title>Trapsons Test</title>
   <meta name="title" content="Trapson">
-  <meta name="description" content="Trapson Is Cute">
+  <meta name="description" content="Trapson Is Test">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta property="og:title" content="Trapson">
-  <meta property="og:description" content="Trapson Is Cute">
+  <meta property="og:description" content="Trapson Is Test">
   <meta property="og:image" content="">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="">
   <meta property="twitter:title" content="Trapson">
-  <meta property="twitter:description" content="Trapson Is Cute">
+  <meta property="twitter:description" content="Trapson Is Test">
   <meta property="twitter:image" content="">
   <!-- Yes Stuff -->
   <script src="js/static-jquery.min.js"></script>
@@ -28,7 +28,7 @@
 <div class="grid-x navigation-section">
 	<div class="header">
         <div class="site-title">
-            <a href="index.html">Trapsons Cute</a>
+            <a href="index.html">Trapsons Test</a>
             <br><br>
             <audio autoplay="" id="audio1" onloadeddata="setHalfVolume()" src="trapson.mp3"></audio>
             <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').play()">Play</trap>
