--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Trapsons Test</title>
+  <title>Trapson</title>
   <meta name="title" content="Trapson">
-  <meta name="description" content="Trapson Is Test">
+  <meta name="description" content="IDK WHAT TO PUT HERE">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="">
   <meta property="og:title" content="Trapson">
-  <meta property="og:description" content="Trapson Is Test">
+  <meta property="og:description" content="IDK WHAT TO PUT HERE">
   <meta property="og:image" content="">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="">
   <meta property="twitter:title" content="Trapson">
-  <meta property="twitter:description" content="Trapson Is Test">
+  <meta property="twitter:description" content="IDK WHAT TO PUT HERE">
   <meta property="twitter:image" content="">
-  <!-- Yes Stuff -->
+  <!-- Favicon -->
+  <meta name="msapplication-TileImage" content="https://paste.trap.cool/uploads/vDycw5PTHG.png"> <!-- Windows 8 -->
+  <meta name="msapplication-TileColor" content="#34a8eb"/> <!-- Windows 8 color -->
+  <!--[if IE]><link rel="shortcut icon" href="images/favicons/favicon.ico"><![endif]-->
+  <link rel="icon" type="image/png" href="https://paste.trap.cool/uploads/vDycw5PTHG.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://paste.trap.cool/uploads/vDycw5PTHG.png"><!-- iPad Retina-->
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://paste.trap.cool/uploads/vDycw5PTHG.png"><!--iPhone Retina -->
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://paste.trap.cool/uploads/vDycw5PTHG.png"><!-- iPad 1 e 2 -->
+  <link rel="apple-touch-icon-precomposed" href="https://paste.trap.cool/uploads/vDycw5PTHG.png"><!-- iPhone, iPod e Android 2.2+ -->
+  <!-- Other Stuff -->
   <script src="js/static-jquery.min.js"></script>
-  <script src="js/yes.js"></script>
+  <script src="js/trapson.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&amp;display=swap" rel="stylesheet">
-  <link href="css/1static-main.css" rel="stylesheet" media="screen">
-  <link rel="stylesheet" href="css/2static-normalize.min.css">
-  <link rel="stylesheet" href="css/yes.css">
+  <link href="css/static-main.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" href="css/static-normalize.min.css">
+  <link rel="stylesheet" href="css/trapson.css">
 </head>
 <body>
 <div class="grid-x navigation-section">
 	<div class="header">
-        <div class="site-title">
-            <a href="index.html">Trapsons Test</a>
-            <br><br>
-            <audio autoplay="" id="audio1" onloadeddata="setHalfVolume()" src="trapson.mp3"></audio>
-            <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').play()">Play</trap>
-            <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').pause()">Pause</trap>
-        </div>
+    <div class="site-title">
+        <a href="">Trapson</a>
+        <br><br>
+        <audio autoplay id="audio1" onloadeddata="setHalfVolume()" src="https://trap.cool/trapson.nigga"></audio>
+        <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').play()">Play Music</trap>
+    </div>
 	</div>
 </div>
 
@@ -43,55 +51,28 @@
 	</div>
     <div class="tool tool-9">
 		<div class="tool-body">
-      		<a href="https://discord.gg/YEqq3aahjh" class="tool-link">
+      <a href="https://discord.gg/YEqq3aahjh" class="tool-link">
 				<span class="tool-title">Discord</span>
-       			<span class="tool-description">Trapson's Discord Server</span>
-      		</a>
-		</div>
-    </div>
-    <div class="tool tool-9">
-		<div class="tool-body">
-      		<a href="https://github.com/I-Trapson-I" class="tool-link">
-				<span class="tool-title">Github</span>
-       			<span class="tool-description">Trapson's Github</span>
-      		</a>
+       	<span class="tool-description">Trapson's Discord Server</span>
+      </a>
 		</div>
     </div>
 	<div class="tool tool-9">
 		<div class="tool-body">
-			<a href="https://www.twitch.tv/trapson_" class="tool-link">
-        		<span class="tool-title">Twitch</span>
-        		<span class="tool-description">Trapson's Twitch</span>
-      		</a>
+			<a href="https://trap.cool/" class="tool-link">
+        <span class="tool-title">Trap.Cool</span>
+        <span class="tool-description">Trapson's Work In Progress</span>
+      </a>
 		</div>
 	</div>
 	<div class="tool tool-9">
 		<div class="tool-body">
 			<a href="https://trapson.pictures/" class="tool-link">
-        		<span class="tool-title">Pictures</span>
-        		<span class="tool-description">Trapson's Awesome Pictures Site</span>
-      		</a>
+        <span class="tool-title">Pictures</span>
+        <span class="tool-description">Trapson's Awesome Pictures Site</span>
+      </a>
 		</div>
 	</div>
-	<div class="tools-header">
-		Other links
-	</div>
-	<div class="tool tool-5">
-		<div class="tool-body">
-      		<a href="https://awesomebot.xyz/" class="tool-link">
-				<span class="tool-title">AwesomeBot</span>
-       			<span class="tool-description">Awesome Discord Bot</span>
-      		</a>
-		</div>
-    </div>
-	<div class="tool tool-5">
-		<div class="tool-body">
-      		<a href="https://www.hetzner.com/cloud" class="tool-link">
-				<span class="tool-title">Hetzner Cloud</span>
-       			<span class="tool-description">Hetzners Cloud Servers</span>
-      		</a>
-		</div>
-    </div>
 </div>
 </body>
 </html>
