--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="site-title">
         <a href="">Trapson</a>
         <br><br>
-        <audio autoplay id="audio1" onloadeddata="setHalfVolume()" src="https://trap.cool/trapson.nigga"></audio>
+        <audio autoplay id="audio1" onloadeddata="setHalfVolume()" src="put what ever here"></audio>
         <trap class="btn btn-md btn-primary display-4" onclick="document.getElementById('audio1').play()">Play Music</trap>
     </div>
 	</div>
